{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 132,
  "lineage": "78b456df-ffed-f40b-493f-8de51aef2e5a",
  "resources": [
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed3f273b2e74f814",
            "arn": "arn:aws:ec2:us-east-2:590234070879:instance/i-06d02e9aaa76cfe52",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "edf-demo-8gp6z-master-profile",
            "id": "i-06d02e9aaa76cfe52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ccb50a1de741dbad"
              }
            ],
            "primary_network_interface_id": "eni-0ccb50a1de741dbad",
            "private_dns": "ip-10-0-153-209.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.153.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:590234070879:key/2a16ceaa-b284-45dd-94bd-4f946c6dc583",
                "throughput": 125,
                "volume_id": "vol-04c7e6f91e7e300f0",
                "volume_size": 120,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01941de3f9598445b",
            "tags": {
              "Name": "edf-demo-8gp6z-master-0",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-master-0",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "edf-demo-8gp6z-master-0-vol",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_security_group_ids": [
              "sg-01004dfe96a961b4f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed3f273b2e74f814",
            "arn": "arn:aws:ec2:us-east-2:590234070879:instance/i-03e1d4e26d67d5aad",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "edf-demo-8gp6z-master-profile",
            "id": "i-03e1d4e26d67d5aad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02ddd55394ffde075"
              }
            ],
            "primary_network_interface_id": "eni-02ddd55394ffde075",
            "private_dns": "ip-10-0-161-98.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.161.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:590234070879:key/2a16ceaa-b284-45dd-94bd-4f946c6dc583",
                "throughput": 125,
                "volume_id": "vol-0e13b0c625966dfd6",
                "volume_size": 120,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056397bbd2b00eaa1",
            "tags": {
              "Name": "edf-demo-8gp6z-master-1",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-master-1",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "edf-demo-8gp6z-master-1-vol",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_security_group_ids": [
              "sg-01004dfe96a961b4f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed3f273b2e74f814",
            "arn": "arn:aws:ec2:us-east-2:590234070879:instance/i-067e8b131aca9c041",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "edf-demo-8gp6z-master-profile",
            "id": "i-067e8b131aca9c041",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6i.xlarge",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-005f00fe8dd34d97f"
              }
            ],
            "primary_network_interface_id": "eni-005f00fe8dd34d97f",
            "private_dns": "ip-10-0-194-101.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.194.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:590234070879:key/2a16ceaa-b284-45dd-94bd-4f946c6dc583",
                "throughput": 125,
                "volume_id": "vol-069488eb35a2bef48",
                "volume_size": 120,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0314d8d0b30c69ef6",
            "tags": {
              "Name": "edf-demo-8gp6z-master-2",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-master-2",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "edf-demo-8gp6z-master-2-vol",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_security_group_ids": [
              "sg-01004dfe96a961b4f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08-2023092521360108860000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08",
            "target_id": "10.0.153.209"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18-20230925213600698800000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18",
            "target_id": "10.0.153.209"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53-2023092521360133200000000b",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53",
            "target_id": "10.0.153.209"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08-2023092521360133200000000c",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08",
            "target_id": "10.0.161.98"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18-20230925213601054000000009",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18",
            "target_id": "10.0.161.98"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53-20230925213600783200000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53",
            "target_id": "10.0.161.98"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08-20230925213600715400000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08",
            "target_id": "10.0.194.101"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18-20230925213600992300000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18",
            "target_id": "10.0.194.101"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53-20230925213601005600000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53",
            "target_id": "10.0.194.101"
          },
          "dependencies": [
            "aws_ami_copy.imported",
            "module.masters.aws_iam_instance_profile.master",
            "module.masters.aws_iam_role.master_role",
            "module.masters.aws_instance.master",
            "module.masters.aws_network_interface.master",
            "module.masters.data.aws_ebs_default_kms_key.current",
            "module.masters.data.aws_partition.current",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.masters",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:network-interface/eni-0ccb50a1de741dbad",
            "description": "Created By OpenShift Installer",
            "id": "eni-0ccb50a1de741dbad",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:b6:d7:0a:ed:09",
            "owner_id": "590234070879",
            "private_dns_name": "ip-10-0-153-209.us-east-2.compute.internal",
            "private_ip": "10.0.153.209",
            "private_ip_list": [
              "10.0.153.209"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.153.209"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01004dfe96a961b4f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01941de3f9598445b",
            "tags": {
              "Name": "edf-demo-8gp6z-master-0",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-master-0",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:network-interface/eni-02ddd55394ffde075",
            "description": "Created By OpenShift Installer",
            "id": "eni-02ddd55394ffde075",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:0f:d4:7d:66:43",
            "owner_id": "590234070879",
            "private_dns_name": "ip-10-0-161-98.us-east-2.compute.internal",
            "private_ip": "10.0.161.98",
            "private_ip_list": [
              "10.0.161.98"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.161.98"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01004dfe96a961b4f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056397bbd2b00eaa1",
            "tags": {
              "Name": "edf-demo-8gp6z-master-1",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-master-1",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:network-interface/eni-005f00fe8dd34d97f",
            "description": "Created By OpenShift Installer",
            "id": "eni-005f00fe8dd34d97f",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:f4:bc:ee:79:db",
            "owner_id": "590234070879",
            "private_dns_name": "ip-10-0-194-101.us-east-2.compute.internal",
            "private_ip": "10.0.194.101",
            "private_ip_list": [
              "10.0.194.101"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.194.101"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01004dfe96a961b4f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0314d8d0b30c69ef6",
            "tags": {
              "Name": "edf-demo-8gp6z-master-2",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-master-2",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-01941de3f9598445b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.128.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01941de3f9598445b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "edf-demo-8gp6z-private-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0284c97a343925bea"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-056397bbd2b00eaa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.160.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056397bbd2b00eaa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "edf-demo-8gp6z-private-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0284c97a343925bea"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-0314d8d0b30c69ef6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.192.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0314d8d0b30c69ef6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "edf-demo-8gp6z-private-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0284c97a343925bea"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-01eff5474d9099dd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.0.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eff5474d9099dd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "edf-demo-8gp6z-public-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_id": "vpc-0284c97a343925bea"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-00b94f84eb567f052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.32.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b94f84eb567f052",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "edf-demo-8gp6z-public-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_id": "vpc-0284c97a343925bea"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-0a818c2d3ce20ed88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "available_ip_address_count": 8187,
            "cidr_block": "10.0.64.0/19",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a818c2d3ce20ed88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "edf-demo-8gp6z-public-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_id": "vpc-0284c97a343925bea"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:vpc/vpc-0284c97a343925bea",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01b86bc112a2eeefc",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-00802ec34693ba587",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0284c97a343925bea",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09c548c1034f40168",
            "owner_id": "590234070879",
            "tags": {
              "Name": "edf-demo-8gp6z-vpc",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051738c50c1e46684",
            "domain": "vpc",
            "id": "eipalloc-051738c50c1e46684",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-52-14-83-126.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.83.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "edf-demo-8gp6z-eip-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-eip-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff9e6714894a267d",
            "domain": "vpc",
            "id": "eipalloc-0ff9e6714894a267d",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-23-167-178.us-east-2.compute.amazonaws.com",
            "public_ip": "3.23.167.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "edf-demo-8gp6z-eip-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-eip-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e7858bc08ed1a67",
            "domain": "vpc",
            "id": "eipalloc-07e7858bc08ed1a67",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-13-59-15-156.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.15.156",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "edf-demo-8gp6z-eip-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-eip-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:internet-gateway/igw-02b6c629970c4961d",
            "id": "igw-02b6c629970c4961d",
            "owner_id": "590234070879",
            "tags": {
              "Name": "edf-demo-8gp6z-igw",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-igw",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_external",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:loadbalancer/net/edf-demo-8gp6z-ext/823c4b51db4e2682",
            "arn_suffix": "net/edf-demo-8gp6z-ext/823c4b51db4e2682",
            "dns_name": "edf-demo-8gp6z-ext-823c4b51db4e2682.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:loadbalancer/net/edf-demo-8gp6z-ext/823c4b51db4e2682",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "edf-demo-8gp6z-ext",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b94f84eb567f052"
              },
              {
                "subnet_id": "subnet-01eff5474d9099dd0"
              },
              {
                "subnet_id": "subnet-0a818c2d3ce20ed88"
              }
            ],
            "subnets": [
              "subnet-00b94f84eb567f052",
              "subnet-01eff5474d9099dd0",
              "subnet-0a818c2d3ce20ed88"
            ],
            "tags": {
              "Name": "edf-demo-8gp6z-ext",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-ext",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-0284c97a343925bea",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "api_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:loadbalancer/net/edf-demo-8gp6z-int/72e2dccce911a56c",
            "arn_suffix": "net/edf-demo-8gp6z-int/72e2dccce911a56c",
            "dns_name": "edf-demo-8gp6z-int-72e2dccce911a56c.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:loadbalancer/net/edf-demo-8gp6z-int/72e2dccce911a56c",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "edf-demo-8gp6z-int",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01941de3f9598445b"
              },
              {
                "subnet_id": "subnet-0314d8d0b30c69ef6"
              },
              {
                "subnet_id": "subnet-056397bbd2b00eaa1"
              }
            ],
            "subnets": [
              "subnet-01941de3f9598445b",
              "subnet-0314d8d0b30c69ef6",
              "subnet-056397bbd2b00eaa1"
            ],
            "tags": {
              "Name": "edf-demo-8gp6z-int",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-int",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "timeouts": {
              "create": "20m"
            },
            "vpc_id": "vpc-0284c97a343925bea",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_external_api",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:listener/net/edf-demo-8gp6z-ext/823c4b51db4e2682/d9794e50947602ae",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:listener/net/edf-demo-8gp6z-ext/823c4b51db4e2682/d9794e50947602ae",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:loadbalancer/net/edf-demo-8gp6z-ext/823c4b51db4e2682",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_external",
            "module.vpc.aws_lb_target_group.api_external",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.public",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_api",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:listener/net/edf-demo-8gp6z-int/72e2dccce911a56c/696436cab34a8e41",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:listener/net/edf-demo-8gp6z-int/72e2dccce911a56c/696436cab34a8e41",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:loadbalancer/net/edf-demo-8gp6z-int/72e2dccce911a56c",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.api_internal",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_internal_services",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:listener/net/edf-demo-8gp6z-int/72e2dccce911a56c/648ab407412e1a87",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:listener/net/edf-demo-8gp6z-int/72e2dccce911a56c/648ab407412e1a87",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:loadbalancer/net/edf-demo-8gp6z-int/72e2dccce911a56c",
            "port": 22623,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_lb.api_internal",
            "module.vpc.aws_lb_target_group.services",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_subnet.private",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_external",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53",
            "arn_suffix": "targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aext/404b3e403fe52e53",
            "lambda_multi_value_headers_enabled": false,
            "name": "edf-demo-8gp6z-aext",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "edf-demo-8gp6z-aext",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-aext",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08",
            "arn_suffix": "targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/readyz",
                "port": "6443",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-aint/6d48335e7eafdd08",
            "lambda_multi_value_headers_enabled": false,
            "name": "edf-demo-8gp6z-aint",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "edf-demo-8gp6z-aint",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-aint",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18",
            "arn_suffix": "targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "22623",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:590234070879:targetgroup/edf-demo-8gp6z-sint/042f5ca3c8bd7c18",
            "lambda_multi_value_headers_enabled": false,
            "name": "edf-demo-8gp6z-sint",
            "port": 22623,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "edf-demo-8gp6z-sint",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-sint",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_vpc_routes",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060cfa3a329fd1e54",
            "original_route_table_id": "rtb-09c548c1034f40168",
            "route_table_id": "rtb-0be3f9301a6ffa868",
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051738c50c1e46684",
            "connectivity_type": "public",
            "id": "nat-0225362e8e6127f54",
            "network_interface_id": "eni-047353222a709d800",
            "private_ip": "10.0.11.171",
            "public_ip": "52.14.83.126",
            "subnet_id": "subnet-01eff5474d9099dd0",
            "tags": {
              "Name": "edf-demo-8gp6z-nat-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-nat-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff9e6714894a267d",
            "connectivity_type": "public",
            "id": "nat-00a56b3358b1a8dce",
            "network_interface_id": "eni-01a3e7517c9804765",
            "private_ip": "10.0.41.198",
            "public_ip": "3.23.167.178",
            "subnet_id": "subnet-00b94f84eb567f052",
            "tags": {
              "Name": "edf-demo-8gp6z-nat-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-nat-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07e7858bc08ed1a67",
            "connectivity_type": "public",
            "id": "nat-030f7c65ddb04204e",
            "network_interface_id": "eni-0aa8a1a69f2495a8a",
            "private_ip": "10.0.66.96",
            "public_ip": "13.59.15.156",
            "subnet_id": "subnet-0a818c2d3ce20ed88",
            "tags": {
              "Name": "edf-demo-8gp6z-nat-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-nat-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02b6c629970c4961d",
            "id": "r-rtb-0be3f9301a6ffa8681080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be3f9301a6ffa868",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "to_nat_gw",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07f342b09c4530e9f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0225362e8e6127f54",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07f342b09c4530e9f",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0510b08521e4217771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00a56b3358b1a8dce",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0510b08521e421777",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-050da2fe2f6ea96d31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-030f7c65ddb04204e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050da2fe2f6ea96d3",
            "state": "active",
            "timeouts": {
              "create": "20m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:route-table/rtb-0be3f9301a6ffa868",
            "id": "rtb-0be3f9301a6ffa868",
            "owner_id": "590234070879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "edf-demo-8gp6z-public",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-public",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routes",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:route-table/rtb-07f342b09c4530e9f",
            "id": "rtb-07f342b09c4530e9f",
            "owner_id": "590234070879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "edf-demo-8gp6z-private-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-private-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:route-table/rtb-0510b08521e421777",
            "id": "rtb-0510b08521e421777",
            "owner_id": "590234070879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "edf-demo-8gp6z-private-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-private-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:route-table/rtb-050da2fe2f6ea96d3",
            "id": "rtb-050da2fe2f6ea96d3",
            "owner_id": "590234070879",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "edf-demo-8gp6z-private-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-private-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routing",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046cd16c29e3dceac",
            "route_table_id": "rtb-07f342b09c4530e9f",
            "subnet_id": "subnet-01941de3f9598445b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d5c963cfcf6d6ad",
            "route_table_id": "rtb-0510b08521e421777",
            "subnet_id": "subnet-056397bbd2b00eaa1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e076e7484008d8fe",
            "route_table_id": "rtb-050da2fe2f6ea96d3",
            "subnet_id": "subnet-0314d8d0b30c69ef6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_net",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091d51b926fdd309d",
            "route_table_id": "rtb-0be3f9301a6ffa868",
            "subnet_id": "subnet-01eff5474d9099dd0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddfa354439419b70",
            "route_table_id": "rtb-0be3f9301a6ffa868",
            "subnet_id": "subnet-00b94f84eb567f052"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e99ba4b2d0cc990",
            "route_table_id": "rtb-0be3f9301a6ffa868",
            "subnet_id": "subnet-0a818c2d3ce20ed88"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:security-group/sg-01004dfe96a961b4f",
            "description": "Created By OpenShift Installer",
            "egress": [],
            "id": "sg-01004dfe96a961b4f",
            "ingress": [],
            "name": "terraform-20230925213514962100000001",
            "name_prefix": "terraform-",
            "owner_id": "590234070879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edf-demo-8gp6z-master-sg",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-master-sg",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:security-group/sg-0e091d009c4c084c0",
            "description": "Created By OpenShift Installer",
            "egress": [],
            "id": "sg-0e091d009c4c084c0",
            "ingress": [],
            "name": "terraform-20230925213516112400000002",
            "name_prefix": "terraform-",
            "owner_id": "590234070879",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "edf-demo-8gp6z-worker-sg",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-worker-sg",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "timeouts": {
              "create": "20m",
              "delete": null
            },
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_egress",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-500016315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-487985263",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_esp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-262275919",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_etcd",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 2379,
            "id": "sgrule-4033575525",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 2380,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-4190168491",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_geneve_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-3950311051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_https",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 6443,
            "id": "sgrule-1771816293",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_icmp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-2888825728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-444132356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-147652388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-3469571135",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ike_nat_t_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-3698943775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-22498557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-333668317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_from_worker_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-3082615858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_internal_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2768826130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-1129817392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_controller_manager_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10257,
            "id": "sgrule-1373877776",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 10257,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-2212217267",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kube_scheduler_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10259,
            "id": "sgrule-2440024723",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 10259,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-3467187281",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_kubelet_secure_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-3692889969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-3115178786",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ovndb_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6641,
            "id": "sgrule-2870593538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 6642,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-759452120",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_tcp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1072710392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2300310071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_services_udp_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-2611994903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_ssh",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-3326063232",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-1963496595",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_ingress_vxlan_from_worker",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-1740408755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": "sg-0e091d009c4c084c0",
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "master_mcs",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22623,
            "id": "sgrule-769803753",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01004dfe96a961b4f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22623,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_egress",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-1855786888",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3652546823",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_esp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 0,
            "id": "sgrule-3405865511",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "50",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-2106592167",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_geneve_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 6081,
            "id": "sgrule-1864636551",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 6081,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_icmp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": -1,
            "id": "sgrule-3093996375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-3857552804",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 500,
            "id": "sgrule-4149839492",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ike_nat_t",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-1251842611",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2231870193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-2545136081",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_from_master_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-871109182",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_internal_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 9000,
            "id": "sgrule-559415582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9999,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-639661210",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_kubelet_insecure_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 10250,
            "id": "sgrule-882141114",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_nat_t_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4500,
            "id": "sgrule-1479117075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 4500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-3318558995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_tcp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-3615040051",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1636995836",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_services_udp_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 30000,
            "id": "sgrule-1931903452",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 32767,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_ssh",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "Created By OpenShift Installer",
            "from_port": 22,
            "id": "sgrule-2880220922",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-4049107615",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_ingress_vxlan_from_master",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Created By OpenShift Installer",
            "from_port": 4789,
            "id": "sgrule-3823921599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0e091d009c4c084c0",
            "self": false,
            "source_security_group_id": "sg-01004dfe96a961b4f",
            "timeouts": null,
            "to_port": 4789,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.master",
            "module.vpc.aws_security_group.worker",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-01941de3f9598445b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01941de3f9598445b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edf-demo-8gp6z-private-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-private-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-056397bbd2b00eaa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.160.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056397bbd2b00eaa1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edf-demo-8gp6z-private-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-private-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-0314d8d0b30c69ef6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.192.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0314d8d0b30c69ef6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edf-demo-8gp6z-private-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-private-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-01eff5474d9099dd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eff5474d9099dd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edf-demo-8gp6z-public-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-public-us-east-2a",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-00b94f84eb567f052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b94f84eb567f052",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edf-demo-8gp6z-public-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-public-us-east-2b",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:subnet/subnet-0a818c2d3ce20ed88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a818c2d3ce20ed88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590234070879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "edf-demo-8gp6z-public-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-public-us-east-2c",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:vpc/vpc-0284c97a343925bea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0adb1feca5269f6e8",
            "default_route_table_id": "rtb-09c548c1034f40168",
            "default_security_group_id": "sg-04ac165709abf8ae2",
            "dhcp_options_id": "dopt-00802ec34693ba587",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0284c97a343925bea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c548c1034f40168",
            "owner_id": "590234070879",
            "tags": {
              "Name": "edf-demo-8gp6z-vpc",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "Name": "edf-demo-8gp6z-vpc",
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"openshift/local/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:590234070879:vpc-endpoint/vpce-02415095bde9d4ed2",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "id": "vpce-02415095bde9d4ed2",
            "owner_id": "590234070879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-050da2fe2f6ea96d3",
              "rtb-0510b08521e421777",
              "rtb-07f342b09c4530e9f",
              "rtb-0be3f9301a6ffa868"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/edf-demo-8gp6z": "owned"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0284c97a343925bea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.default",
            "module.vpc.aws_route_table.private_routes",
            "module.vpc.aws_vpc.new_vpc",
            "module.vpc.data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    }
  ]
}